@@ -20,16 +20,15 @@ import org.apache.kafka.common.ConsumerGroupState;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class ListConsumerGroupsOptionsTest {
+    @SuppressWarnings({"deprecation", "removal"})
     @Test
     public void testState() {
-        Set<ConsumerGroupState> consumerGroupStates = new HashSet<>(Arrays.asList(ConsumerGroupState.values()));
+        Set<ConsumerGroupState> consumerGroupStates = Set.of(ConsumerGroupState.values());
         ListConsumerGroupsOptions options = new ListConsumerGroupsOptions().inStates(consumerGroupStates);
         assertEquals(consumerGroupStates, options.states());
     }
