@@ -68,8 +68,6 @@ import org.mockito.stubbing.OngoingStubbing;
 import org.mockito.verification.VerificationMode;
 
 import java.time.Duration;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -84,7 +82,6 @@ import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
 
-import static java.util.Collections.emptySet;
 import static org.apache.kafka.connect.integration.TestableSourceConnector.TOPIC_CONFIG;
 import static org.apache.kafka.connect.runtime.ConnectorConfig.CONNECTOR_CLASS_CONFIG;
 import static org.apache.kafka.connect.runtime.ConnectorConfig.KEY_CONVERTER_CLASS_CONFIG;
@@ -119,7 +116,7 @@ import static org.mockito.Mockito.when;
 @MockitoSettings(strictness = Strictness.WARN)
 public class ExactlyOnceWorkerSourceTaskTest {
     private static final String TOPIC = "topic";
-    private static final Map<String, byte[]> PARTITION = Collections.singletonMap("key", "partition".getBytes());
+    private static final Map<String, byte[]> PARTITION = Map.of("key", "partition".getBytes());
     private static final Map<String, ?> OFFSET = offset(12);
 
     // Connect-format data
@@ -169,7 +166,7 @@ public class ExactlyOnceWorkerSourceTaskTest {
     private static final SourceRecord SOURCE_RECORD_2 =
             new SourceRecord(PARTITION, OFFSET, TOPIC, null, KEY_SCHEMA, KEY, RECORD_SCHEMA, VALUE_2);
 
-    private static final List<SourceRecord> RECORDS = Arrays.asList(SOURCE_RECORD_1, SOURCE_RECORD_2);
+    private static final List<SourceRecord> RECORDS = List.of(SOURCE_RECORD_1, SOURCE_RECORD_2);
     private final AtomicReference<CountDownLatch> pollLatch = new AtomicReference<>(new CountDownLatch(0));
     private final AtomicReference<List<SourceRecord>> pollRecords = new AtomicReference<>(RECORDS);
 
@@ -232,6 +229,7 @@ public class ExactlyOnceWorkerSourceTaskTest {
 
     private Map<String, String> workerProps() {
         Map<String, String> props = new HashMap<>();
+        props.put(WorkerConfig.BOOTSTRAP_SERVERS_CONFIG, "localhost:9092");
         props.put("key.converter", "org.apache.kafka.connect.json.JsonConverter");
         props.put("value.converter", "org.apache.kafka.connect.json.JsonConverter");
         props.put("internal.key.converter", "org.apache.kafka.connect.json.JsonConverter");
@@ -267,7 +265,7 @@ public class ExactlyOnceWorkerSourceTaskTest {
     }
 
     private static Map<String, ?> offset(int n) {
-        return Collections.singletonMap("key", n);
+        return Map.of("key", n);
     }
 
     private void createWorkerTask() {
@@ -285,7 +283,7 @@ public class ExactlyOnceWorkerSourceTaskTest {
         workerTask = new ExactlyOnceWorkerSourceTask(taskId, sourceTask, statusListener, initialState, keyConverterPlugin, valueConverterPlugin, headerConverterPlugin,
                 transformationChain, producer, admin, TopicCreationGroup.configuredGroups(sourceConfig), offsetReader, offsetWriter, offsetStore,
                 config, clusterConfigState, metrics, errorHandlingMetrics, plugins.delegatingLoader(), time, RetryWithToleranceOperatorTest.noneOperator(), statusBackingStore,
-                sourceConfig, Runnable::run, preProducerCheck, postProducerCheck, Collections::emptyList, null, TestPlugins.noOpLoaderSwap());
+                sourceConfig, Runnable::run, preProducerCheck, postProducerCheck, List::of, null, TestPlugins.noOpLoaderSwap());
     }
 
     @ParameterizedTest
@@ -296,7 +294,7 @@ public class ExactlyOnceWorkerSourceTaskTest {
 
         workerTask.removeMetrics();
 
-        assertEquals(emptySet(), filterToTaskMetrics(metrics.metrics().metrics().keySet()));
+        assertEquals(Set.of(), filterToTaskMetrics(metrics.metrics().metrics().keySet()));
     }
 
     private Set<MetricName> filterToTaskMetrics(Set<MetricName> metricNames) {
@@ -562,7 +560,7 @@ public class ExactlyOnceWorkerSourceTaskTest {
         createWorkerTask();
 
         // Make sure the task returns empty batches from poll before we start polling it
-        pollRecords.set(Collections.emptyList());
+        pollRecords.set(List.of());
 
         when(offsetWriter.beginFlush()).thenReturn(false);
 
@@ -638,7 +636,7 @@ public class ExactlyOnceWorkerSourceTaskTest {
         time.sleep(commitInterval * 2);
 
         awaitPolls(2);
-        assertEquals(2, flushCount(), 
+        assertEquals(2, flushCount(),
                 "Two flushes should have taken place after offset commit interval has elapsed again");
 
         awaitShutdown();
@@ -956,7 +954,7 @@ public class ExactlyOnceWorkerSourceTaskTest {
         expectConvertHeadersAndKeyValue();
 
         // We're trying to send three records
-        workerTask.toSend = Arrays.asList(record1, record2, record3);
+        workerTask.toSend = List.of(record1, record2, record3);
         OngoingStubbing<Future<RecordMetadata>> producerSend = when(producer.send(any(), any()));
         // The first one is sent successfully
         producerSend = expectSuccessfulSend(producerSend);
@@ -966,7 +964,7 @@ public class ExactlyOnceWorkerSourceTaskTest {
         expectSuccessfulSend(producerSend);
 
         assertFalse(workerTask.sendRecords());
-        assertEquals(Arrays.asList(record2, record3), workerTask.toSend);
+        assertEquals(List.of(record2, record3), workerTask.toSend);
         verify(producer).beginTransaction();
         // When using poll-based transaction boundaries, we do not commit transactions while retrying delivery for a batch
         verify(producer, never()).commitTransaction();
@@ -1001,7 +999,7 @@ public class ExactlyOnceWorkerSourceTaskTest {
         when(producer.send(any(), any()))
                 .thenThrow(new KafkaException("Producer closed while send in progress", new InvalidTopicException(TOPIC)));
 
-        workerTask.toSend = Arrays.asList(record1, record2);
+        workerTask.toSend = List.of(record1, record2);
         assertThrows(ConnectException.class, workerTask::sendRecords);
 
         verify(producer).beginTransaction();
@@ -1080,7 +1078,7 @@ public class ExactlyOnceWorkerSourceTaskTest {
     }
 
     private void awaitEmptyPolls(int minimum) {
-        awaitPolls(minimum, Collections.emptyList());
+        awaitPolls(minimum, List.of());
     }
 
     private void awaitPolls(int minimum) {
@@ -1168,8 +1166,8 @@ public class ExactlyOnceWorkerSourceTaskTest {
 
     private void expectPossibleTopicCreation() {
         if (config.topicCreationEnable()) {
-            Set<String> created = Collections.singleton(TOPIC);
-            Set<String> existing = Collections.emptySet();
+            Set<String> created = Set.of(TOPIC);
+            Set<String> existing = Set.of();
             TopicAdmin.TopicCreationResponse creationResponse = new TopicAdmin.TopicCreationResponse(created, existing);
             when(admin.createOrFindTopics(any())).thenReturn(creationResponse);
         }
