@@ -71,8 +71,6 @@ import org.mockito.stubbing.Answer;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.time.Duration;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedList;
 import java.util.List;
@@ -128,8 +126,8 @@ public class WorkerSourceTaskTest {
     public static final String POLL_TIMEOUT_MSG = "Timeout waiting for poll";
 
     private static final String TOPIC = "topic";
-    private static final Map<String, Object> PARTITION = Collections.singletonMap("key", "partition".getBytes());
-    private static final Map<String, Object> OFFSET = Collections.singletonMap("key", 12);
+    private static final Map<String, Object> PARTITION = Map.of("key", "partition".getBytes());
+    private static final Map<String, Object> OFFSET = Map.of("key", 12);
 
     // Connect-format data
     private static final Schema KEY_SCHEMA = Schema.INT32_SCHEMA;
@@ -185,7 +183,7 @@ public class WorkerSourceTaskTest {
 
     private static final TaskConfig TASK_CONFIG = new TaskConfig(TASK_PROPS);
 
-    private static final List<SourceRecord> RECORDS = Collections.singletonList(
+    private static final List<SourceRecord> RECORDS = List.of(
             new SourceRecord(PARTITION, OFFSET, "topic", null, KEY_SCHEMA, KEY, RECORD_SCHEMA, RECORD)
     );
 
@@ -204,6 +202,7 @@ public class WorkerSourceTaskTest {
         props.put("value.converter", "org.apache.kafka.connect.json.JsonConverter");
         props.put("offset.storage.file.filename", "/tmp/connect.offsets");
         props.put(TOPIC_CREATION_ENABLE_CONFIG, String.valueOf(enableTopicCreation));
+        props.put(WorkerConfig.BOOTSTRAP_SERVERS_CONFIG, "localhost:9092");
         return props;
     }
 
@@ -255,7 +254,7 @@ public class WorkerSourceTaskTest {
         workerTask = new WorkerSourceTask(taskId, sourceTask, statusListener, initialState, keyConverterPlugin, valueConverterPlugin, errorHandlingMetrics, headerConverterPlugin,
                 transformationChain, producer, admin, TopicCreationGroup.configuredGroups(sourceConfig),
                 offsetReader, offsetWriter, offsetStore, config, clusterConfigState, metrics, plugins.delegatingLoader(), Time.SYSTEM,
-                retryWithToleranceOperator, statusBackingStore, Runnable::run, Collections::emptyList, null, TestPlugins.noOpLoaderSwap());
+                retryWithToleranceOperator, statusBackingStore, Runnable::run, List::of, null, TestPlugins.noOpLoaderSwap());
     }
 
     @ParameterizedTest
@@ -504,7 +503,7 @@ public class WorkerSourceTaskTest {
         final CountDownLatch pollLatch = expectPolls(1);
 
         expectTopicCreation(TOPIC);
-        expectBeginFlush(Arrays.asList(true, false).iterator()::next);
+        expectBeginFlush(List.of(true, false).iterator()::next);
         expectOffsetFlush(true, true);
 
         workerTask.initialize(TASK_CONFIG);
@@ -591,9 +590,9 @@ public class WorkerSourceTaskTest {
                 .thenAnswer(producerSendAnswer(true));
 
         // Try to send 3, make first pass, second fail. Should save last two
-        workerTask.toSend = Arrays.asList(record1, record2, record3);
+        workerTask.toSend = List.of(record1, record2, record3);
         workerTask.sendRecords();
-        assertEquals(Arrays.asList(record2, record3), workerTask.toSend);
+        assertEquals(List.of(record2, record3), workerTask.toSend);
 
         // Next they all succeed
         workerTask.sendRecords();
@@ -613,7 +612,7 @@ public class WorkerSourceTaskTest {
 
         expectSendRecordProducerCallbackFail();
 
-        workerTask.toSend = Arrays.asList(record1, record2);
+        workerTask.toSend = List.of(record1, record2);
         assertThrows(ConnectException.class, () -> workerTask.sendRecords());
 
         verify(transformationChain, times(2)).apply(any(), any(SourceRecord.class));
@@ -636,7 +635,7 @@ public class WorkerSourceTaskTest {
         when(producer.send(any(ProducerRecord.class), any(Callback.class)))
                 .thenThrow(new KafkaException("Producer closed while send in progress", new InvalidTopicException(TOPIC)));
 
-        workerTask.toSend = Arrays.asList(record1, record2);
+        workerTask.toSend = List.of(record1, record2);
         assertThrows(ConnectException.class, () -> workerTask.sendRecords());
     }
 
@@ -660,7 +659,7 @@ public class WorkerSourceTaskTest {
                 .doNothing()
                 .when(sourceTask).commitRecord(any(SourceRecord.class), any(RecordMetadata.class));
 
-        workerTask.toSend = Arrays.asList(record1, record2, record3);
+        workerTask.toSend = List.of(record1, record2, record3);
         workerTask.sendRecords();
         assertNull(workerTask.toSend);
     }
@@ -673,7 +672,7 @@ public class WorkerSourceTaskTest {
         expectTopicCreation(TOPIC);
 
         //Use different offsets for each record, so we can verify all were committed
-        final Map<String, Object> offset2 = Collections.singletonMap("key", 13);
+        final Map<String, Object> offset2 = Map.of("key", 13);
 
         // send two records
         // record 1 will succeed
@@ -690,7 +689,7 @@ public class WorkerSourceTaskTest {
                 .thenAnswer(producerSendAnswer(false));
 
         //Send records and then commit offsets and verify both were committed and no exception
-        workerTask.toSend = Arrays.asList(record1, record2);
+        workerTask.toSend = List.of(record1, record2);
         workerTask.sendRecords();
         workerTask.updateCommittableOffsets();
         workerTask.commitOffsets();
@@ -755,8 +754,8 @@ public class WorkerSourceTaskTest {
     }
 
     private TopicAdmin.TopicCreationResponse createdTopic(String topic) {
-        Set<String> created = Collections.singleton(topic);
-        Set<String> existing = Collections.emptySet();
+        Set<String> created = Set.of(topic);
+        Set<String> existing = Set.of();
         return new TopicAdmin.TopicCreationResponse(created, existing);
     }
 
@@ -774,7 +773,7 @@ public class WorkerSourceTaskTest {
             count.incrementAndGet();
             latch.countDown();
             Thread.sleep(10);
-            return Collections.emptyList();
+            return List.of();
         });
         return latch;
     }
@@ -896,7 +895,7 @@ public class WorkerSourceTaskTest {
     private void expectOffsetFlush(Boolean... succeedList) throws Exception {
         Future<Void> flushFuture = mock(Future.class);
         when(offsetWriter.doFlush(any(org.apache.kafka.connect.util.Callback.class))).thenReturn(flushFuture);
-        LinkedList<Boolean> succeedQueue = new LinkedList<>(Arrays.asList(succeedList));
+        LinkedList<Boolean> succeedQueue = new LinkedList<>(List.of(succeedList));
 
         doAnswer(invocationOnMock -> {
             boolean succeed = succeedQueue.pop();
@@ -993,7 +992,7 @@ public class WorkerSourceTaskTest {
 
     private void expectTopicCreation(String topic) {
         if (config.topicCreationEnable()) {
-            when(admin.describeTopics(topic)).thenReturn(Collections.emptyMap());
+            when(admin.describeTopics(topic)).thenReturn(Map.of());
             when(admin.createOrFindTopics(any(NewTopic.class))).thenReturn(createdTopic(topic));
         }
     }
@@ -1018,7 +1017,7 @@ public class WorkerSourceTaskTest {
             committerAppender.setClassLogger(SourceTaskOffsetCommitter.class, org.apache.logging.log4j.Level.TRACE);
             taskAppender.setClassLogger(WorkerSourceTask.class, org.apache.logging.log4j.Level.TRACE);
             SourceTaskOffsetCommitter.commit(workerTask);
-            assertEquals(Collections.emptyList(), taskAppender.getMessages());
+            assertEquals(List.of(), taskAppender.getMessages());
 
             List<String> committerMessages = committerAppender.getMessages();
             assertEquals(1, committerMessages.size());
