@@ -32,7 +32,6 @@ import org.jline.reader.Candidate;
 
 import java.io.PrintWriter;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.NavigableMap;
@@ -50,7 +49,7 @@ public final class Commands {
 
     static {
         TreeMap<String, Type> typesMap = new TreeMap<>();
-        for (Type type : Arrays.asList(
+        for (Type type : List.of(
             CatCommandHandler.TYPE,
             CdCommandHandler.TYPE,
             ExitCommandHandler.TYPE,
