@@ -25,7 +25,6 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtensionContext;
 
 import java.lang.reflect.Method;
-import java.util.Collections;
 import java.util.List;
 
 import static org.mockito.Mockito.mock;
@@ -34,7 +33,7 @@ import static org.mockito.Mockito.when;
 public class ClusterTestExtensionsUnitTest {
 
     static List<ClusterConfig> cfgEmpty() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     @SuppressWarnings({"unchecked", "rawtypes"})
@@ -56,25 +55,25 @@ public class ClusterTestExtensionsUnitTest {
         when(annot.value()).thenReturn("").thenReturn(" ").thenReturn("cfgEmpty");
 
         Assertions.assertEquals(
-                "ClusterTemplate value can't be empty string.",
-                Assertions.assertThrows(IllegalStateException.class, () ->
-                        ext.processClusterTemplate(context, annot)
-                ).getMessage()
+            "ClusterTemplate value can't be empty string.",
+            Assertions.assertThrows(IllegalStateException.class, () ->
+                ext.processClusterTemplate(context, annot)
+            ).getMessage()
         );
 
 
         Assertions.assertEquals(
-                "ClusterTemplate value can't be empty string.",
-                Assertions.assertThrows(IllegalStateException.class, () ->
-                        ext.processClusterTemplate(context, annot)
-                ).getMessage()
+            "ClusterTemplate value can't be empty string.",
+            Assertions.assertThrows(IllegalStateException.class, () ->
+                ext.processClusterTemplate(context, annot)
+            ).getMessage()
         );
 
         Assertions.assertEquals(
-                "ClusterConfig generator method should provide at least one config",
-                Assertions.assertThrows(IllegalStateException.class, () ->
-                        ext.processClusterTemplate(context, annot)
-                ).getMessage()
+            "ClusterConfig generator method should provide at least one config",
+            Assertions.assertThrows(IllegalStateException.class, () ->
+                ext.processClusterTemplate(context, annot)
+            ).getMessage()
         );
     }
 }
