@@ -21,9 +21,9 @@ import org.apache.kafka.clients.admin.Admin;
 import org.apache.kafka.clients.admin.AdminClientConfig;
 import org.apache.kafka.clients.admin.AlterConfigOp;
 import org.apache.kafka.clients.admin.AlterConfigsOptions;
-import org.apache.kafka.clients.admin.ClientMetricsResourceListing;
 import org.apache.kafka.clients.admin.Config;
 import org.apache.kafka.clients.admin.ConfigEntry;
+import org.apache.kafka.clients.admin.ListConfigResourcesOptions;
 import org.apache.kafka.common.Uuid;
 import org.apache.kafka.common.config.ConfigResource;
 import org.apache.kafka.common.utils.Exit;
@@ -37,12 +37,13 @@ import org.slf4j.LoggerFactory;
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.Properties;
+import java.util.Set;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
@@ -90,11 +91,7 @@ public class ClientMetricsCommand {
             }
         } catch (ExecutionException e) {
             Throwable cause = e.getCause();
-            if (cause != null) {
-                printException(cause);
-            } else {
-                printException(e);
-            }
+            printException(Objects.requireNonNullElse(cause, e));
             exitCode = 1;
         } catch (Throwable t) {
             printException(t);
@@ -129,8 +126,8 @@ public class ClientMetricsCommand {
             Collection<AlterConfigOp> alterEntries = configsToBeSet.entrySet().stream()
                     .map(entry -> new AlterConfigOp(new ConfigEntry(entry.getKey(), entry.getValue()),
                             entry.getValue().isEmpty() ? AlterConfigOp.OpType.DELETE : AlterConfigOp.OpType.SET))
-                    .collect(Collectors.toList());
-            adminClient.incrementalAlterConfigs(Collections.singletonMap(configResource, alterEntries), alterOptions).all()
+                    .toList();
+            adminClient.incrementalAlterConfigs(Map.of(configResource, alterEntries), alterOptions).all()
                     .get(30, TimeUnit.SECONDS);
 
             System.out.println("Altered client metrics config for " + entityName + ".");
@@ -143,8 +140,8 @@ public class ClientMetricsCommand {
             ConfigResource configResource = new ConfigResource(ConfigResource.Type.CLIENT_METRICS, entityName);
             AlterConfigsOptions alterOptions = new AlterConfigsOptions().timeoutMs(30000).validateOnly(false);
             Collection<AlterConfigOp> alterEntries = oldConfigs.stream()
-                    .map(entry -> new AlterConfigOp(entry, AlterConfigOp.OpType.DELETE)).collect(Collectors.toList());
-            adminClient.incrementalAlterConfigs(Collections.singletonMap(configResource, alterEntries), alterOptions)
+                    .map(entry -> new AlterConfigOp(entry, AlterConfigOp.OpType.DELETE)).toList();
+            adminClient.incrementalAlterConfigs(Map.of(configResource, alterEntries), alterOptions)
                     .all().get(30, TimeUnit.SECONDS);
 
             System.out.println("Deleted client metrics config for " + entityName + ".");
@@ -155,11 +152,19 @@ public class ClientMetricsCommand {
 
             List<String> entities;
             if (entityNameOpt.isPresent()) {
-                entities = Collections.singletonList(entityNameOpt.get());
+                if (adminClient.listConfigResources(Set.of(ConfigResource.Type.CLIENT_METRICS), new ListConfigResourcesOptions())
+                        .all().get(30, TimeUnit.SECONDS).stream()
+                        .noneMatch(resource -> resource.name().equals(entityNameOpt.get()))) {
+                    System.out.println("The client metric resource " + entityNameOpt.get() + " doesn't exist and doesn't have dynamic config.");
+                    return;
+                }
+                entities = List.of(entityNameOpt.get());
             } else {
-                Collection<ClientMetricsResourceListing> resources = adminClient.listClientMetricsResources()
-                        .all().get(30, TimeUnit.SECONDS);
-                entities = resources.stream().map(ClientMetricsResourceListing::name).collect(Collectors.toList());
+                Collection<ConfigResource> resources = adminClient
+                    .listConfigResources(Set.of(ConfigResource.Type.CLIENT_METRICS), new ListConfigResourcesOptions())
+                    .all()
+                    .get(30, TimeUnit.SECONDS);
+                entities = resources.stream().map(ConfigResource::name).toList();
             }
 
             for (String entity : entities) {
@@ -170,15 +175,17 @@ public class ClientMetricsCommand {
         }
 
         public void listClientMetrics() throws Exception {
-            Collection<ClientMetricsResourceListing> resources = adminClient.listClientMetricsResources()
-                    .all().get(30, TimeUnit.SECONDS);
-            String results = resources.stream().map(ClientMetricsResourceListing::name).collect(Collectors.joining("\n"));
+            Collection<ConfigResource> resources = adminClient
+                .listConfigResources(Set.of(ConfigResource.Type.CLIENT_METRICS), new ListConfigResourcesOptions())
+                .all()
+                .get(30, TimeUnit.SECONDS);
+            String results = resources.stream().map(ConfigResource::name).collect(Collectors.joining("\n"));
             System.out.println(results);
         }
 
         private Collection<ConfigEntry> getClientMetricsConfig(String entityName) throws Exception {
             ConfigResource configResource = new ConfigResource(ConfigResource.Type.CLIENT_METRICS, entityName);
-            Map<ConfigResource, Config> result = adminClient.describeConfigs(Collections.singleton(configResource))
+            Map<ConfigResource, Config> result = adminClient.describeConfigs(Set.of(configResource))
                     .all().get(30, TimeUnit.SECONDS);
             return result.get(configResource).entries();
         }
